--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,13 +1,12 @@
 name: CD
 
 on:
-  push:
+  pull_request:
     branches:
       - main
       - release
-  
   workflow_dispatch:
-  
+
 jobs:
   deploy-non-prod:
     if: github.ref == 'refs/heads/release'
@@ -79,4 +78,42 @@ jobs:
             HostName $SSH_HOST
             User $SSH_USER
             IdentityFile ~/.ssh/google-cloud.key
-
+            StrictHostKeyChecking no
+          END
+        env:
+          SSH_USER: ${{ secrets.GOOGLE_CLOUD_SSH_USER }}
+          SSH_KEY: ${{ secrets.GOOGLE_CLOUD_SSH_KEY }}
+          SSH_HOST: ${{ secrets.GOOGLE_CLOUD_SSH_HOST }}
+    
+      - name: Checkout repository
+        uses: actions/checkout@v3
+    
+      - name: Set up Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          
+      - name: Install dependencias
+        run: npm install
+        
+      - name: Run the tests
+        run: npm run test -- --coverage
+        env:
+          CD: true
+      
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+      - name: Build the application
+        run: npm run build
+      
+      - name: Deploy the application to prod environment
+        run: |
+          ssh google-cloud 'sudo systemctl stop react-app'
+          ssh google-cloud 'sudo rm -rf /app/react-app-prod'
+          scp -r build google-cloud:/home/github/react-app-prod
+          ssh google-cloud 'sudo mv /home/github/react-app-prod /app/react-app-prod'
+          ssh google-cloud 'sudo systemctl start react-app'
